--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10"
   }
 }
