--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/glanderson42/ManagerMaximus#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^3.0.1",
     "express": "^4.16.4",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
