--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.0",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
