set backend url

--- a/Backend/config/default.json5
+++ b/Backend/config/default.json5
@@ -1,7 +1,7 @@
 {
   projectName: "ManagerMaximus",
   projectEmail: "managermaximus@heatnet.hu",
-  hostUrl: 'http://127.0.0.1',
+  hostUrl: 'http://managermaximus.tk',
   port: 3000,
   frontendUrl: 'http://managermaximus.tk/',
 
