--- a/Backend/config/default.json5
+++ b/Backend/config/default.json5
@@ -13,12 +13,12 @@
   },
 
   smtp: {
-    host: "cloud.s1.spaceweb.hu",
+    host: "",
     port: 465,
     secure: true,
     auth: {
-      user: "managermaximus@heatnet.hu",
-      pass: "3Pi141592",
+      user: "",
+      pass: "",
     },
   },
 }
