--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,8 @@
     "config": "^3.0.1",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.0",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
