--- a/Backend/config/default.json5
+++ b/Backend/config/default.json5
@@ -6,9 +6,9 @@
   portSSL: 3001,
   frontendUrl: 'http://managermaximus.tk/',
 
-  privKey: '/etc/letsencrypt/live/mmax.ml/privkey.pem',
-  cert:    '/etc/letsencrypt/live/mmax.ml/cert.pem',
-  chain:   '/etc/letsencrypt/live/mmax.ml/chain.pem',
+  privKey: '/etc/letsencrypt/live/managermaximus.tk/privkey.pem',
+  cert:    '/etc/letsencrypt/live/managermaximus.tk/cert.pem',
+  chain:   '/etc/letsencrypt/live/managermaximus.tk/chain.pem',
 
   database: {
     host: "127.0.0.1",
