--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "nodemon ./src/server.js --exec \"npm run lint && node\"",
     "lint": "eslint ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
