--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,7 +27,8 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "typedoc": "^0.14.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "tar": ">=4.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -48,6 +49,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "tar": ">=4.4.2"
   }
 }
