Better login for backend

--- a/Backend/config/default.json5
+++ b/Backend/config/default.json5
@@ -27,5 +27,9 @@
     },
   },
 
-  smtpList: []
+  smtpList: [],
+
+  requestLog: false,
+  requestLogDetailed: false,
+  timestampLogMinutes: 0,
 }
