--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -33,7 +33,7 @@
               "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/chart.js/dist/Chart.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
