--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,15 +21,16 @@
     "@angular/platform-browser": "~7.2.7",
     "@angular/platform-browser-dynamic": "~7.2.7",
     "@angular/router": "~7.2.7",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.5",
     "rxjs": "~6.4.0",
+    "tar": ">=4.4.2",
     "tslib": "^1.9.0",
     "typedoc": "^0.14.2",
-    "zone.js": "~0.8.26",
-    "tar": ">=4.4.2"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
