--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.7",
     "@angular/compiler": "~7.2.7",
     "@angular/core": "~7.2.7",
@@ -26,10 +27,10 @@
     "primeicons": "^1.0.0",
     "primeng": "^7.0.5",
     "rxjs": "~6.4.0",
+    "tar": ">=4.4.2",
     "tslib": "^1.9.0",
     "typedoc": "^0.14.2",
-    "zone.js": "~0.8.26",
-    "tar": ">=4.4.2"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
